# clavy

./: .cspell.json  .gitignore  .goreleaser.yml  Cargo.toml  Package.swift  README.md
.github/workflows/: publish.yml  test.yml
Sources/: Command.swift  InputSourceState.swift  Logger.swift  Observers.swift  Privilege.swift  RunningAppsObserver.swift  Service.swift  WindowChangeObserver.swift
assets/: Info.plist  launchd.plist
src/: cmd.rs  error.rs  lib.rs  main.rs  observer.rs  service.rs  util.rs
src/observer/: input_source.rs  notification.rs  window.rs  workspace.rs
