[package]
name = "clavy"
version = "0.1.0-alpha8"
license = "GPL-3.0"
edition = "2024"
homepage = "https://github.com/rami3l/clavy"
repository = "https://github.com/rami3l/clavy"
description = "An input source switching daemon for macOS."
readme = "README.md"

[dependencies]
accessibility-sys = "0.1.3"
block2 = "0.6.0"
clap = { version = "4.5.31", features = ["cargo", "derive", "env"] }
core-foundation = "0.10.0"
core-graphics = "0.24.0"
embed_plist = "1.2.2"
launchctl = "0.3.2"
libc = "0.2.170"
objc2 = "0.6.0"
objc2-app-kit = { version = "0.3.0", features = [
  "libc",
  "NSRunningApplication",
  "NSWorkspace",
] }
objc2-foundation = { version = "0.3.0", features = [
  "NSDictionary",
  "NSDistributedNotificationCenter",
  "NSEnumerator",
  "NSKeyValueObserving",
  "NSNotification",
  "NSOperation",
  "NSRange",
  "NSString",
  "block2",
] }
smol = "2.0.2"
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
built = { version = "0.7.7", features = ["git2"] }

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
trivial_numeric_casts = "warn"
unused_allocation = "warn"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
wildcard_imports = "allow"
